<resources>
    <string name="app_name">Project LYFIA</string>

    <!--signin activity -->
    <string name="user_name">Username</string>
    <string name="user_hint">Enter your username...</string>
    <string name="user_password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_account">Enter your Account details</string>
    <string name="signin_btn">Sign In</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>





</resources>
