<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onbording_bg"
    tools:context=".ActivitySignIn">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/onboarding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_180sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sdp" />

        <RelativeLayout
            android:id="@+id/layout_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/top_round_container_white_bg"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_30sdp">

            <TextView
                android:id="@+id/text_enter_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/enter_your_account"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_18sdp" />

            <RelativeLayout
                android:id="@+id/layout_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_enter_account">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/user_name"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:id="@+id/layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_username">



                    <EditText
                        android:id="@+id/txtPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/user_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_phone_number">

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/user_password"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:id="@+id/layout_middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_password">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_password">

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/round_button_blue"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:transitionName="button_blue_transition" />

                <RelativeLayout
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignIn"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_acc"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_toEndOf="@id/txtLeft"
                        android:text="@string/sign_up"
                        android:textColor="@color/onbording_bg"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>